<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <!--    <Button-->
    <!--        android:id="@+id/score2"-->
    <!--        android:layout_width="150dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:textStyle="bold"-->
    <!--        android:textColor="@color/green"-->
    <!--        android:textSize="15dp"-->
    <!--        android:text="score"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/lilu"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent">-->
    <!--    </Button>-->
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="390dp"
        android:layout_height="390dp"
        android:gravity="center"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">
        <!--score-->
        <Button
            android:id="@+id/score"
            android:background="@color/white"
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="120dp"
            android:layout_marginTop="140dp"
            android:textSize="15sp"
            android:text="@string/game_over_play_again">
        </Button>
        <!--newgame-->
        <Button
            android:id="@+id/new_game"
            android:background="@color/red"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="130dp"
            android:layout_marginTop="130dp"
            android:text="@string/new_game">

        </Button>
        <!--resume-->
        <Button
            android:id="@+id/resume"
            android:background="@color/red"
            android:layout_width="150dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_game"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="130dp"
            android:layout_marginTop="10dp"
            android:text="@string/resume_game">

        </Button>
        <!--playagain-->
        <Button
            android:id="@+id/playagain"
            android:background="@color/red"
            android:layout_width="150dp"
            android:textAlignment="center"
            android:layout_height="80dp"
            android:layout_below="@id/resume"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="120dp"
            android:layout_marginTop="60dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/game_over_play_again">

        </Button>
        <!--board-->
        <RelativeLayout
            android:id="@+id/board"
            android:layout_width="380dp"
            android:layout_height="380dp"
            android:background="@color/black"
            android:gravity="center"
            android:layout_marginStart="5dp"
            tools:ignore="MissingConstraints">

        </RelativeLayout>


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lilu"
        android:layout_width="330dp"
        android:layout_height="330dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">


        <Button
            android:id="@+id/up"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/up"
            app:backgroundTint="@drawable/up_arrow"/>

        <LinearLayout

            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="132dp"
            android:gravity="center">

            <Button
                android:id="@+id/left"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/left"
                app:backgroundTint="@drawable/left_arrow"/>

            <Button
                android:id="@+id/pause"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/pause" />

            <Button
                android:id="@+id/right"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/right"
                app:backgroundTint="@drawable/right_arrow"/>

        </LinearLayout>

        <Button
            android:id="@+id/down"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_marginBottom="-50dp"
            android:gravity="center"
            android:text="@string/down"
            app:backgroundTint="@drawable/down_arrow"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="back"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>